# runtab

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/runtab/: Cargo.toml
crates/runtab/src/: billing.rs  cmdnorm.rs  encoding.rs  format.rs  lib.rs  main.rs  model.rs  overview.rs  pricing.rs  pricing_snapshot.json  report.rs  timeutil.rs  wire.rs
crates/runtab/src/adapters/: claude_code.rs  claude_tools.rs  codex.rs  hermes.rs  mod.rs  opencode.rs
crates/runtab/src/ledger/: api_daily.rs  api_query.rs  api_sessions.rs  cursor_store.rs  identity.rs  mod.rs  project_prefs.rs  push_rows.rs  query.rs  rtk_store.rs  savings_query.rs  schema.rs  sync_store.rs  tool_query.rs  tool_store.rs
crates/runtab/src/rtkimport/: attribute.rs  mod.rs
crates/runtab/src/serve/: api.rs  api_savings.rs  api_tools.rs  background.rs  browser.rs  dto.rs  embed.rs  mod.rs  router.rs
crates/runtab/src/sync/: client.rs  config.rs  cron.rs  login.rs  mod.rs  pull.rs  push.rs  review.rs  run.rs  token.rs
crates/runtab/tests/: api_tests.rs  codex_incremental_tests.rs  codex_parser_tests.rs  cron_install_tests.rs  dogfood_tests.rs  format_tests.rs  hermes_adapter_tests.rs  incremental_tests.rs  ledger_tests.rs  migration_tests.rs  opencode_adapter_tests.rs  overview_tests.rs  parser_tests.rs  pricing_tests.rs  render_tests.rs  report_tests.rs  router_tests.rs  run_once_tests.rs  scan_billing_tests.rs  sync_tests.rs  tool_events_tests.rs
crates/runtab/tests/common/: mod.rs
crates/runtab/tests/fixtures/: claude_cache_heavy.jsonl  claude_dup.jsonl  claude_logged_cost.jsonl  claude_malformed.jsonl  claude_normal.jsonl  claude_tool_events.jsonl  claude_unknown_model.jsonl  codex_fork_replay.jsonl  codex_malformed.jsonl  codex_model_switch.jsonl  codex_multibyte_ts.jsonl  codex_no_usage.jsonl  codex_normal.jsonl  codex_two_meta_flag_off.jsonl  codex_two_meta_flag_on.jsonl
npm/: make-packages.mjs
npm/runtab/: README.md  package.json
ui/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  Dashboard.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/api/: client.ts  types.ts
ui/src/components/: ErrorBoundary.tsx
ui/src/components/charts/: AgentDonut.tsx  DeepHistory.tsx  Heatmap.tsx  HeroBars.tsx  HeroTooltip.tsx  ModelDonut.tsx  PlanGauge.tsx  ProjectBars.tsx  UplotTimeline.tsx  heatmapGrid.ts  heroData.ts
ui/src/components/layout/: FilterControls.tsx  StickyBar.tsx
ui/src/components/panels/: Panel.tsx
ui/src/components/recap/: KpiTiles.tsx  RecapStrip.tsx
ui/src/components/sections/: AgentsPanel.tsx  HeatmapPanel.tsx  HeroSection.tsx  ModelsPanel.tsx  PlanPanel.tsx  ProjectsPanel.tsx  SavingsPanel.tsx
ui/src/components/sync/: Overlays.tsx  ProjectReview.tsx  SeeWhatSyncsDrawer.tsx  SettingsDrawer.tsx  SyncBanner.tsx
ui/src/components/tables/: SessionsTable.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  sheet.tsx  skeleton.tsx  switch.tsx
ui/src/fixtures/: api.ts  dataset.ts
ui/src/lib/: colors.ts  dateRanges.ts  format.ts  privacy.ts  useAsync.ts  useClock.ts  useElementWidth.ts  useFilters.ts
